# app/app/openapi.yaml
@@ -6,6 +6,24 @@ info:
     title: App API
     version: 0.0.1
 paths:
+    /api/admin_dhb/all:
+        get:
+            tags:
+                - App
+            operationId: App_AdminAll
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/AdminAllReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /api/admin_dhb/fee:
         get:
             tags:
@@ -346,6 +364,29 @@ paths:
                                 $ref: '#/components/schemas/Status'
 components:
     schemas:
+        AdminAllReply:
+            type: object
+            properties:
+                todayTotalUser:
+                    type: integer
+                    format: int64
+                totalUser:
+                    type: integer
+                    format: int64
+                allBalance:
+                    type: string
+                todayLocation:
+                    type: string
+                allLocation:
+                    type: string
+                todayWithdraw:
+                    type: string
+                allWithdraw:
+                    type: string
+                allReward:
+                    type: string
+                allSystemRewardAndFee:
+                    type: string
         AdminFeeReply:
             type: object
             properties: {}
